path to config file

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "git-guppy": "^1.0.1",
     "gulp": "^3.9.0",
     "gulp-chug": "^0.5.1",
+    "gulp-chug-pretty": "^0.1.1",
     "gulp-plumber": "^1.0.1",
     "guppy-pre-push": "^0.2.1",
     "lodash.defaultsdeep": "^3.10.0",
